--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
             <h2>Famous Places</h2>
             <div class="image-container">
                 <div class="card">
-                    <img src="https://images.unsplash.com/photo-1542314831-068cd1dbfeeb?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1080" alt="Eiffel Tower">
+                    <img src="https://unsplash.com/photos/eiffel-tower-paris-PM4VZZn-YyM">
                     <h3>Eiffel Tower</h3>
                 </div>
                 <div class="card">
-                    <img src="https://images.unsplash.com/photo-1576485299630-8d0393d2f59f?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1080" alt="Louvre Museum">
+                    <img src="https://unsplash.com/photos/louvre-museum-paris-PIOqHJG5a1U?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1080" alt="Louvre Museum">
                     <h3>Louvre Museum</h3>
                 </div>
                 <div class="card">
-                    <img src="https://images.unsplash.com/photo-1562504208-0b5f2e6c47b7?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1080" alt="Notre-Dame Cathedral">
+                    <img src="https://unsplash.com/photos/white-cathedral-photograph-W9EuazQV2Gw?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1080" alt="Notre-Dame Cathedral">
                     <h3>Notre-Dame Cathedral</h3>
                 </div>
             </div>
